--- a/popup.css
+++ b/popup.css
@@ -4,7 +4,7 @@ body {
   padding: 20px;
   font-family: 'Inter', sans-serif;
   background: linear-gradient(135deg, #2c2c2c, #3d3d3d); color: #ffffff;
-  color: #ffffff;
+  color: #3e3333;
   text-align: center;
   border-radius: 12px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
@@ -29,7 +29,7 @@ body {
 }
 
 h2 {
-  color: #ffffff;
+  color: #f5e5e5;
   font-size: 22px;
   font-weight: 700;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
@@ -54,7 +54,7 @@ textarea {
   border-radius: 8px;
   border: 2px solid #aaaaaa;
   background: #ffffff; color: #444;
-  color: #ffffff;
+  color: #3b3636;
   font-size: 15px;
   resize: none;
   box-shadow: 2px 2px 10px rgba(170, 170, 170, 0.4);
@@ -101,13 +101,6 @@ button:active {
 }
 
 pre {
-  background: #ffffff; color: #444;
-  padding: 12px;
-  width: 100%;
-  max-height: 200px;
-  overflow-y: auto;
-  border-radius: 8px;
-  border: 2px solid #aaaaaa;
-  color: #ffffff;
+  background: #2c2c2c; color: #000000;
   animation: fadeIn 0.5s ease-in-out;
 }
